crates/parser/tests/snapshots/prefix_block_comment.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-comment

## Input

```
s {
  # comment
  key value
}

```

## CST

```
SOURCE_FILE@0..30
  PREFIX_BLOCK@0..30
    WORD_KEY@0..1
      WORD@0..1 "s"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    COMMENT@6..15
      SHARP@6..7 "#"
      SPACE@7..8 " "
      WORD@8..15 "comment"
    NEWLINE@15..16 "\n"
    SPACE@16..18 "  "
    ENTRY@18..28
      WORD_KEY@18..21
        WORD@18..21 "key"
      SPACE@21..22 " "
      LINE_STRING@22..27
        STRING@22..27 "value"
      NEWLINE@27..28 "\n"
    CLOSE_BRACE@28..29 "}"
    NEWLINE@29..30 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "s",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@18..21 "key",
                    },
                    value: LineString {
                        string: STRING@22..27 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@28..29 "}",
        },
    ],
}
```

vim:ft=markdown
